--- a/aula-08/index.html
+++ b/aula-08/index.html
@@ -7,14 +7,13 @@
     <title>Aula 08 - fontes</title>
 </head>
 <body>
-    <h1>meu titulo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum molestiae natus ad labore non sapiente consequatur omnis asperiores voluptatum aspernatur quibusdam possimus aperiam odio sunt animi accusantium aut, tempora debitis.</p>
+    <img src="denovo-não-v0-q4ikjr3ov2hb1.webp" alt="" width="250px">
 
     <div class="livro">
 
-        <p class="um"> texto01</p>
-        <p class="um"> texto02</p>
-        <p class="um"> texto03</p>
+        <p class="um"> kuitapalestrino</p>
+        <p class="um"> Um idolo que está ontra o progresso do Corinthians </p>
+        <p class="um"> muito aclamado pela torcida dos times rivais ao do Corinthians </p>
     </div>
     
 </body>
